--- a/counting_contract/Cargo.toml
+++ b/counting_contract/Cargo.toml
@@ -11,3 +11,6 @@ crate-type = ["cdylib", "rlib"]
 [dependencies]
 cosmwasm-std = "1.0.0"
 serde = "1.0.0"
+
+[dev-dependencies]
+cw-multi-test = "0.13.4"
