--- a/counting_contract/Cargo.toml
+++ b/counting_contract/Cargo.toml
@@ -10,6 +10,7 @@ crate-type = ["cdylib", "rlib"]
 
 [dependencies]
 cosmwasm-std = "1.0.0"
+cw-storage-plus = "0.15.1"
 serde = "1.0.0"
 
 [dev-dependencies]
