--- a/counting_contract/Cargo.toml
+++ b/counting_contract/Cargo.toml
@@ -9,10 +9,12 @@ crate-type = ["cdylib", "rlib"]
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-cosmwasm-std = "1.0.0"
+cosmwasm-std = "1.1"
 cw-storage-plus = "0.15.1"
 serde = "1.0.0"
 thiserror = "1.0.0"
+schemars = "0.8"
+cosmwasm-schema = "1.1"
 
 [dev-dependencies]
-cw-multi-test = "0.13.4"
+cw-multi-test = "0.15"
