--- a/counting_contract/Cargo.toml
+++ b/counting_contract/Cargo.toml
@@ -9,12 +9,12 @@ crate-type = ["cdylib", "rlib"]
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-cosmwasm-std = "1.1"
-cw-storage-plus = "0.15.1"
-serde = "1.0.0"
-thiserror = "1.0.0"
-schemars = "0.8"
-cosmwasm-schema = "1.1"
+cosmwasm-schema = "1.1.1"
+cosmwasm-std = "1.1.2"
+cw-storage-plus = "0.15.0"
+schemars = "0.8.10"
+serde = { version = "1.0.144", features = ["derive"] }
+thiserror = "1.0.35"
 
 [dev-dependencies]
-cw-multi-test = "0.15"
+cw-multi-test = "0.15.0"
