--- a/counting_contract/Cargo.toml
+++ b/counting_contract/Cargo.toml
@@ -6,15 +6,21 @@ edition = "2021"
 [lib]
 crate-type = ["cdylib", "rlib"]
 
+[features]
+library = []
+tests = ["library", "cw-multi-test"]
+
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-cosmwasm-schema = "1.1.1"
 cosmwasm-std = "1.1.2"
 cw-storage-plus = "0.15.0"
 schemars = "0.8.10"
 serde = { version = "1.0.144", features = ["derive"] }
 thiserror = "1.0.35"
+cw-multi-test = { version = "0.15.0", optional = true }
+cosmwasm-schema = "1.1.1"
 
 [dev-dependencies]
 cw-multi-test = "0.15.0"
+
