--- a/counting_contract-0.2/Cargo.toml
+++ b/counting_contract-0.2/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "counting_contract"
-version = "0.1.0"
+version = "0.2.0"
 edition = "2021"
 
 [lib]
@@ -23,4 +23,5 @@ cosmwasm-schema = "1.1.1"
 
 [dev-dependencies]
 cw-multi-test = "0.15.0"
+counting_contract_0_1_0 = {package = "counting_contract", version = "0.1.0", path = "../counting_contract", features = ["tests"]}
 
