--- a/counting_contract-0.2/.cargo/config
+++ b/counting_contract-0.2/.cargo/config
@@ -1,6 +1,6 @@
 [alias]
 wasm = "build --release --target wasm32-unknown-unknown --lib"
-wasm-debug = "build --target wasm32-unknown-unknown"
 unit-test = "test --lib"
 integration-test = "test --test integration"
+wasm-debug = "build --target wasm32-unknown-unknown --lib"
 schema = "run --example schema"
