--- a/counting_contract-0.3/Cargo.toml
+++ b/counting_contract-0.3/Cargo.toml
@@ -15,14 +15,14 @@ tests = ["library", "cw-multi-test"]
 [dependencies]
 cosmwasm-std = "1.1.2"
 cw-storage-plus = "0.15.0"
+cw2 = "0.15.0"
 schemars = "0.8.10"
 serde = { version = "1.0.144", features = ["derive"] }
 thiserror = "1.0.35"
 cw-multi-test = { version = "0.15.0", optional = true }
 cosmwasm-schema = "1.1.1"
-cw2 = "0.14.0"
 
 [dev-dependencies]
+counting_contract-0_1 = { path = "../counting_contract", package = "counting_contract", features = ["tests"] }
 cw-multi-test = "0.15.0"
-counting_contract_0_1_0 = {package = "counting_contract", version = "0.1.0", path = "../counting_contract", features = ["tests"]}
 
