add optimizer script

--- a/counting_contract-0.3/Cargo.toml
+++ b/counting_contract-0.3/Cargo.toml
@@ -26,3 +26,9 @@ cosmwasm-schema = "1.1.1"
 counting_contract-0_1 = { path = "../counting_contract", package = "counting_contract", features = ["tests"] }
 cw-multi-test = "0.15.0"
 
+[package.metadata.scripts]
+optimize = """docker run --rm -v "$(pwd)":/code \
+  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
+  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
+  cosmwasm/rust-optimizer-arm64:0.12.6
+"""
